fix trainers card proportions on tablet

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,12 +1,12 @@
 .footer {
-  padding: 42px 0;
+  padding: 42px 0 22px;
 
   color: $color-base-1;
 
   background-color: $color-base-7;
 
   @include vp-1199 {
-    padding: 45px 0 37px;
+    padding: 45px 0 30px;
   }
 
   @include vp-767 {
@@ -77,13 +77,12 @@
 }
 
 .footer__nav ul {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 40px;
+  display: grid;
+  grid-template-columns: 1fr repeat(5, max-content);
+  gap: 2px 40px;
 
   @include vp-1199 {
-    gap: 30px;
+    gap: 2px 30px;
   }
 
   @include vp-767 {
@@ -96,7 +95,10 @@
 
 .footer__nav li {
   &:first-child {
+    margin-top: 4px;
     margin-right: auto;
+
+    grid-row: 1/10;
 
     @include vp-767 {
       margin: 4px 0 21px;
