--- a/source/sass/ui-kit/trainer-card.scss
+++ b/source/sass/ui-kit/trainer-card.scss
@@ -48,6 +48,14 @@
   display: block;
 
   object-fit: cover;
+
+  @include vp-1199 {
+    aspect-ratio: 10/11;
+  }
+
+  @include vp-767 {
+    aspect-ratio: auto;
+  }
 }
 
 .trainer-card__back {
@@ -65,6 +73,10 @@
   text-align: center;
   background-color: $color-base-8-op89;
   overflow: auto;
+
+  @include vp-1199 {
+    width: 100%;
+  }
 
   @include vp-767 {
     padding: 42px 16px;
